reduced side-navigation width to prevent text being hidden by content

--- a/Skins/UniversityCollege/skin.css
+++ b/Skins/UniversityCollege/skin.css
@@ -726,7 +726,9 @@ span.JobsLink a {
   white-space:normal;
  }
 
-
+#side-navigation .rpText{
+	width:150px;	
+}
 
 #side-navigation span.rmText:hover
 {
